Fixes spacing on blog widget

--- a/app/_scss/sections/_blog.scss
+++ b/app/_scss/sections/_blog.scss
@@ -49,7 +49,7 @@
 				font-style: italic;
 				position: absolute; top: 0;
 				display: inline;
-				margin: 0.76em;
+				margin: 0.4em 0.76em;
 				font-size: 1.2em;
 				line-height: 1.55em;
 			}
